fix navbar menu icon and left aligned

--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ p {
 /* Hide the link that should open and close the topnav on small screens */
 .topnav .icon {
   display: none;
+  color: white;
 }
 
 /* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
@@ -62,6 +63,9 @@ p {
   .topnav a.icon {
     float: right;
     display: block;
+    vertical-align: middle;
+    font-size: 36px;
+    padding-top: 5px;
   }
 }
 
